# grid-sandbox

./: .adr-config.yaml  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  config.default.yaml  config.yaml  package-lock.json  package.json  phase3-verification-log.txt  pyproject.toml  pyrightconfig.json
.adr-plugin/: README.md  VERSION
.adr-plugin/scripts/: adr_classify.py  adr_config.py  adr_conflict_detect.py  adr_frontmatter.py  adr_lint.py  adr_review.py
.claude/: settings.json
.claude/helpers/: adr-generator.cjs  code-review.cjs  hook-handler.cjs  intelligence.cjs
.github/: CODEOWNERS
.github/workflows/: container-build.yml  eval-ci.yml  phase3-contract.yml  phase4a-ccb-types-sync.yml
.grid/: config.yaml
.grid/transcripts/: 060db5c1-4bdb-4825-a95f-92f760c7ee28.transcript.jsonl  33cc529c-bcde-4f58-a235-4d0511fc7ab3.transcript.jsonl  888de917-b945-4d2c-b6e4-346bcdcd9feb.transcript.jsonl  b3e3bcd1-d562-4d18-b267-1241a044017e.transcript.jsonl  b4ae6f2f-e7bb-4371-bbd3-b164c3d1b57d.transcript.jsonl  bec5e4cf-bb3d-4151-95f4-d61ee5876732.transcript.jsonl
.planning/: .continue-here.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  REVIEW_POLICY.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  (+2 more)
agents/: coder.yaml  explore.yaml  general-purpose.yaml  plan.yaml  reviewer.yaml  verification.yaml
container/: .dockerignore  Dockerfile  Dockerfile.dev
crates/grid-platform/: Cargo.toml
crates/grid-platform/src/: agent_pool.rs  main.rs  ws.rs
crates/grid-platform/src/auth/: jwt.rs
crates/grid-platform/tests/: test_agent_pool.rs  test_user_runtime.rs
crates/grid-server/: Cargo.toml
crates/grid-server/src/: config.rs  main.rs  router.rs  session.rs  state.rs  ws.rs
crates/grid-server/src/api/: agents.rs  audit.rs  autonomous.rs  budget.rs  collaboration.rs  context.rs  eval_sessions.rs  executions.rs  hooks.rs  knowledge_graph.rs  mcp_logs.rs  mcp_servers.rs  mcp_tools.rs  memories.rs  metering.rs  metrics.rs  providers.rs  scheduler.rs  security.rs  sessions.rs  skills.rs  sync.rs  tasks.rs  tools.rs  user_context.rs
crates/grid-server/src/middleware/: audit.rs  auth.rs  mod.rs  rate_limit.rs
crates/grid-server/tests/: api_agents.rs
crates/grid-server/tests/common/: mod.rs
lang/claude-code-runtime-python/: Dockerfile  build_proto.py  pyproject.toml
lang/claude-code-runtime-python/src/claude_code_runtime/: __init__.py  __main__.py  config.py  l2_memory_client.py  mapper.py  sdk_wrapper.py  service.py  session.py
lang/claude-code-runtime-python/src/claude_code_runtime/_proto/eaasp/common/v1/: common_pb2.py  common_pb2.pyi  common_pb2_grpc.py
lang/claude-code-runtime-python/src/claude_code_runtime/_proto/eaasp/runtime/v1/: runtime_pb2.py  runtime_pb2.pyi  runtime_pb2_grpc.py
lang/claude-code-runtime-python/src/claude_code_runtime/_proto/eaasp/runtime/v2/: common_pb2.pyi  hook_pb2.py  runtime_pb2.py  runtime_pb2.pyi  runtime_pb2_grpc.py
lang/claude-code-runtime-python/tests/: test_config.py  test_l2_memory_client.py  test_scoped_hooks.py  test_service.py  test_session.py  test_skill_extraction_e2e.py
lang/claude-code-runtime-python/tests/fixtures/: skill_extraction_input_trace.json
scripts/: check-ccb-types-ts-sync.sh  dev-eaasp.sh  download_swebench_lite.py  eaasp-e2e.sh  gen_runtime_proto.py  phase2_5-e2e-verify.sh  phase3-runtime-verification.sh  test_hook_scripts.sh  verify-dual-runtime.sh  verify-v2-mvp.py  verify-v2-mvp.sh
sdk/python/: pyproject.toml
sdk/python/src/eaasp/: __init__.py
sdk/python/src/eaasp/authoring/: __init__.py  hook_builder.py  skill_parser.py  skill_scaffold.py  skill_validator.py
sdk/python/src/eaasp/models/: __init__.py  agent.py  message.py  playbook.py  policy.py  session.py  skill.py  tool.py
sdk/python/src/eaasp/sandbox/: __init__.py  base.py  grid_cli.py  multi_runtime.py  runtime.py
sdk/python/tests/: test_authoring.py  test_models.py  test_sandbox_cli.py  test_sandbox_runtime.py
tools/eaasp-certifier/: Cargo.toml  build.rs
tools/eaasp-certifier/src/: blindbox.rs  lib.rs  main.rs  mock_l3.rs  report.rs  v2_must_methods.rs  verifier.rs
tools/eaasp-cli-v2/: README.md  pyproject.toml
tools/eaasp-cli-v2/src/eaasp_cli_v2/: client.py  cmd_memory.py  cmd_policy.py  cmd_session.py  cmd_skill.py
tools/eaasp-cli-v2/tests/: test_cmd_session.py  test_cmd_session_events.py  test_session_list_deferred.py
tools/eaasp-l2-memory-engine/: README.md  pyproject.toml
tools/eaasp-l2-memory-engine/src/eaasp_l2_memory_engine/: __init__.py  anchors.py  api.py  db.py  files.py  index.py  main.py  mcp_tools.py  vector_index.py
tools/eaasp-l2-memory-engine/src/eaasp_l2_memory_engine/embedding/: __init__.py  provider.py
tools/eaasp-l2-memory-engine/tests/: conftest.py  test_anchors.py  test_api.py  test_db_migration.py  test_embedding_provider.py  test_files.py  test_files_embedding.py  test_index.py  test_mcp_tools.py  test_review_fixes.py  test_vector_index.py
tools/eaasp-l3-governance/: README.md  pyproject.toml
tools/eaasp-l4-orchestration/: README.md  build_proto.py  pyproject.toml
tools/eaasp-l4-orchestration/src/eaasp_l4_orchestration/: api.py  context_assembly.py  db.py  event_backend.py  event_backend_sqlite.py  event_handlers.py  event_interceptor.py  event_models.py  event_stream.py  handshake.py  l1_client.py  mcp_resolver.py  session_orchestrator.py
tools/eaasp-l4-orchestration/src/eaasp_l4_orchestration/_proto/eaasp/runtime/v2/: common_pb2.py  common_pb2.pyi  runtime_pb2.py  runtime_pb2_grpc.py
tools/eaasp-l4-orchestration/tests/: conftest.py  test_api.py  test_chunk_coalescing.py  test_context_assembly.py  test_event_backend_sqlite.py  test_event_handlers.py  test_event_integration.py  test_event_interceptor.py  test_event_models.py  test_fts_migration.py  test_intents.py  test_l1_client.py  test_session_orchestrator.py  test_session_state.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web-platform/: package.json
(+1290 files in other folders)
