[package]
name = "grid-platform"
edition.workspace = true
version.workspace = true

[features]
default = []
full = ["grid-engine/full"]

[dependencies]
grid-types = { workspace = true }
grid-engine = { workspace = true }
grid-sandbox = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
dashmap = { workspace = true }
uuid.workspace = true
futures-util = { workspace = true }
tokio-stream = { workspace = true }
chrono.workspace = true
rusqlite = { workspace = true }
# JWT authentication
jsonwebtoken = "9"
# Password hashing
argon2 = "0.5"
# Random for salt generation
rand = "0.8"
# Error handling
thiserror = { workspace = true }
# OAuth
async-trait = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
