[package]
name = "eaasp-certifier"
edition.workspace = true
version.workspace = true
description = "EAASP Runtime Contract verifier — validates 16-method gRPC compliance"

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"

# Async runtime
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Timing
chrono = { workspace = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
