[project]
name = "eaasp-cli-v2"
version = "0.1.0"
description = "EAASP v2.0 Developer CLI"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eaasp_cli_v2"]
